<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="content_authority">vnd.android.cursor.item.timeline</string>
    
    <string name="app_name">YambaPDM</string>
    <string name="action_settings">Settings</string>
    <string name="action_status">Status</string>
    <string name="action_timeline">Timeline</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_preferences">Preferences</string>
    <string name="action_status_send">Send Action</string>
    <string name="action_sendtimeline_email">Send timeline by email</string>
    <string name="action_sendstatus_email">Send by email</string>
    <string name="action_userinfo">Info</string>
    <string name="loading">Loading &#8230;</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_status">StatusActivity</string>
    <string name="status_send_text">Send</string>
    <string name="status_remaining_characters_pendent">-</string>
    <string name="title_activity_yamba_base">YambaBaseActivity</string>
    <string name="tweet_author">Author</string>
    <string name="tweet_date">Publication Date</string>
    <string name="tweet_id">ID</string>
    <string name="loading_image">file:///android_res/drawable/loading_unicorn.gif</string>
    <string name="preferences_yamba_title">Yamba session</string>
    <string name="preferences_yamba_username">Username</string>
    <string name="preferences_yamba_username_summary">Yamba account username</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="preferences_yamba_password">Password</string>
    <string name="preferences_yamba_password_summary">Yamba account password</string>
    <string name="preferences_yamba_uri">URI</string>
    <string name="preferences_yamba_uri_summary">Yamba service URI</string>
    <string name="preferences_timeline_title">Timeline</string>
    <string name="preferences_timeline_maxtweets">Size</string>
    <string name="preferences_timeline_maxtweets_summary">Maximum status in your timeline</string>
    <string name="preferences_timeline_autorefresh">Enable Auto Refresh</string>
    <string name="preferences_timeline_autorefresh_summary">Enables/Disables the timeline autorefresh</string>
    <string name="preferences_timeline_autorefreshrate">Auto Refresh Rate</string>
    <string name="preferences_timeline_autorefreshrate_summary">Set the interval in which the refresh is executed (in seconds)</string>
    <string name="preferences_status_title">Status</string>
    <string name="preferences_status_maxcharacters">Max size</string>
    <string name="preferences_status_maxcharacters_summary">Maximum number of characters in one status</string>
    <string name="title_activity_launcher">LauncherActivity</string>
	<string name="title_activity_userinfo">UserInfoActivity</string>
    
    <string name="userInfoTitle">User Info</string>
    <string name="userInfoNameLabel">Name</string>
    <string name="userInfoDefaultName"> </string>
    <string name="userInfoStatusLabel">Status</string>
    <string name="userInfoDefaultStatus">0</string>
    <string name="userInfoSubscriptionsLabel">Subscriptions</string>
    <string name="userInfoDefaultSubscriptions">0</string>
    <string name="userInfoSubscribersLabel">Subscribers</string>
    <string name="userInfoDefaultSubscribers">0</string>
    
    <string name="mail_destinary_title">Destinatary</string>
    <string name="mail_destinary_desc">Send to:</string>
    <string name="mail_destinary_okbutton">OK</string>
    <string name="mail_timeline_subject" formatted="false">%s\'s timeline (Date: %s).</string>
    <string name="mail_timeline_body_tweet" formatted="false">Tweet: %s, from: %s.</string>
    <string name="mail_send_error">Mail not sent because you didn\'t pick a valid destinatary.</string>
</resources>