<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/userInfoTitle"
        android:textColor="#AA0"
        android:textSize="32sp" />

    <!-- Username -->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_gravity="left"
        android:text="@string/userInfoNameLabel"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/userInfoName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/userInfoDefaultName"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginRight="10dp" >
    
		    <!-- Status -->

	     	<TextView
	     	    android:layout_width="fill_parent"
	     	    android:layout_height="wrap_content"
	     	    android:layout_gravity="left"
	     	    android:layout_marginTop="10dp"
	     	    android:text="@string/userInfoStatusLabel"
	     	    android:textAppearance="?android:attr/textAppearanceLarge"
	     	    android:textSize="15sp" />
		
		    <TextView
		        android:id="@+id/userInfoStatus"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="left"
		        android:text="@string/userInfoDefaultStatus"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginRight="10dp" >
    
		    <!-- Subscribers -->		

		     <TextView
		         android:layout_width="fill_parent"
		         android:layout_height="wrap_content"
		         android:layout_gravity="left"
		         android:layout_marginTop="10dp"
		         android:text="@string/userInfoSubscribersLabel"
		         android:textAppearance="?android:attr/textAppearanceLarge"
		         android:textSize="15sp" />
		
		    <TextView
		        android:id="@+id/userInfoSubscribers"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="left"
		        android:text="@string/userInfoDefaultSubscribers"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >
	    
		    <!--  Subscriptions -->

	     	<TextView
	     	    android:layout_width="fill_parent"
	     	    android:layout_height="wrap_content"
	     	    android:layout_gravity="left"
	     	    android:layout_marginTop="10dp"
	     	    android:text="@string/userInfoSubscriptionsLabel"
	     	    android:textAppearance="?android:attr/textAppearanceLarge"
	     	    android:textSize="15sp" />
		
		    <TextView
		        android:id="@+id/userInfoSubscriptions"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="left"
		        android:text="@string/userInfoDefaultSubscriptions"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:textSize="15sp" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>